Mon Dec  4 19:55:37 UTC 2006 / Arjen de Korte <arjen@de-korte.org>

 - dummy-ups: allow absolute path names for the configuration file

Fri Dec  1 01:04:15 UTC 2006 / Peter Selinger <selinger@users.sourceforge.net>

 - configure.in: corrected name of have_libgd variable
 - data/driver.list: removed "hidups" in favor of "newhidups"

Sat Nov 25 07:50:16 UTC 2006 / Arjen de Korte <arjen@de-korte.org>

 - drivers/apcsmart.h: add compatibility strings for Smart-UPS 600

Fri Nov 24 20:28:49 UTC 2006 / Arjen de Korte <arjen@de-korte.org>

 - common/state.c: I really should make changes in the working copy
   directly, rather than in a separate build environment (forgot to
   include a naming change)

Fri Nov 24 20:18:16 UTC 2006 / Arjen de Korte <arjen@de-korte.org>

 - server/sstate.c: send PING sooner to allow a retry before declaring
   a driver stale (1/3 of the way, so that we can send another one 2/3
   of the way)

Fri Nov 24 20:05:41 UTC 2006 / Arjen de Korte <arjen@de-korte.org>

 - common/state.c: rewrite of overly complex state_delinfo(), minor
   fixups in other functions to make better use of recursion

Thu Nov 23 14:17:08 UTC 2006 / Arnaud Quette <aquette.dev@gmail.com>

 - docs/upssched.txt: fix a wrong example for NOTIFYCMD

Wed Nov 22 13:47:31 UTC 2006 / Arjen de Korte <arjen@de-korte.org>

 - drivers/dummy-ups.c: fix broken setvar() function

Tue Nov 21 02:30:05 UTC 2006 / Charles Lepple <clepple@gmail.com>

 - configure.in: Don't test for OpenSSL unless the user requests it. Patch
   from Peter Selinger.

Mon Nov 20 18:33:56 UTC 2006 / Arjen de Korte <arjen@de-korte.org>

 - upsd: don't wait for DUMPDONE before forking to the background, this
   obsoletes the MAXINIT parameter

Sat Nov 18 11:21:21 UTC 2006 / Arjen de Korte <arjen@de-korte.org>

 - upsd: forgot to add MAXINIT parameter to man page

Thu Nov 16 20:15:48 UTC 2006 / Arjen de Korte <arjen@de-korte.org>

 - upsd: add MAXINIT parameter to upsd.conf to make the time upsd waits